(refactor): Reorganizar código y mover archivos en fronted para mejor estructura

--- a/src/frontend/template/404.html
+++ b/src/frontend/template/404.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Página no encontrada - 404</title>
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="shortcut icon" href="assets/svg/logo.svg" type="image/x-png" />
-        <script src="js/theme-init.js"></script>
+        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="shortcut icon" href="../assets/svg/logo.svg" type="image/x-png" />
+        <script src="../js/theme-init.js"></script>
     </head>
     <body class="bg-background text-text p-4 min-h-screen flex flex-col">
         <header class="flex justify-between items-center gap-4 p-4 bg-secondary rounded-lg">
