--- a/src/frontend/template/login.html
+++ b/src/frontend/template/login.html
@@ -5,14 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>MentorIA - Login</title>
         <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet" />
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="shortcut icon" href="assets/svg/logo.svg" type="image/x-png" />
+        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="shortcut icon" href="../assets/svg/logo.svg" type="image/x-png" />
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-        <script src="js/login.js"></script>
+        <script src="../js/login.js"></script>
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-        <script src="assets/particles.js"></script>
+        <script src="../assets/particles.js"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script src="js/theme-init.js"></script>
+        <script src="../js/theme-init.js"></script>
     </head>
     <body class="bg-background text-text p-4 flex flex-col justify-center">
         <div data-aos="fade-up" data-aos-delay="300" class="mx-auto">
