--- a/src/frontend/template/registro.html
+++ b/src/frontend/template/registro.html
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>MentorIA - Registro</title>
         <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet" />
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="shortcut icon" href="assets/svg/logo.svg" type="image/x-png" />
-        <script src="js/theme-init.js"></script>
+        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="shortcut icon" href="../assets/svg/logo.svg" type="image/x-png" />
+        <script src="../js/theme-init.js"></script>
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-        <script src="../backend/assets/particles.js"></script>
+        <script src="../assets/particles.js"></script>
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     </head>
@@ -223,7 +223,7 @@
             </div>
         </div>
     </body>
-    <script src="js/registro.js"></script>
+    <script src="../js/registro.js"></script>
     <script>
         AOS.init();
     </script>
