--- a/src/frontend/template/index.html
+++ b/src/frontend/template/index.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>MentorIA - Inicio</title>
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-        <script src="assets/particles.js"></script>
+        <script src="../assets/particles.js"></script>
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script src="js/theme-init.js"></script>
+        <script src="../js/theme-init.js"></script>
         <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet" />
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="shortcut icon" href="assets/svg/logo.svg" type="image/x-png" />
+        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="shortcut icon" href="../assets/svg/logo.svg" type="image/x-png" />
     </head>
     <body class="bg-background text-text p-2 sm:p-4 min-h-screen flex flex-col">
         <!-- HEADER -->
